Finished testing for CardHandler and ProductionFilePathProvider classes with 100% coverage